# robot-dynamics-identify-v1.0

./: CMakeLists.txt  README.md
examples/: test_robot_dynamics.cpp
examples/excitation_trajectory/: CMakeLists.txt  excitation_trajectory.cpp
include/: robot_model.h
include/DynamicsIdentify/: dynamics_identify.h
include/RobotDynamics/: robot_dynamics.h
include/RobotModel/: robot_math.h  robot_model.h
src/: robot_model.cpp
src/DynamicsIdentify/: dynamics_identify.cpp
src/RobotDynamics/: robot_dynamics.cpp
src/RobotModel/: robot_model.cpp
